重构：将沙盒相关实现类移至独立的 sandbox 包并增加允许访问用户主目录的配置支持